$Id: History,v 1.65 2003-01-08 00:09:37 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Jan, 7th, M.Asai           transport-V05-00-01
----------------
- Fix in G4Transportation.cc for updating material-cut-couple.

Dec, 16th, G. Cosmo        transport-V05-00-00
-------------------
- Merged branch "geant4-04-01-ref-02-cuts-branch" to HEAD.
  Included development for 'cuts-by-region' in G4Transportation.cc.

Nov, 20th, J. Apostolakis  transport-V04-01-05
-------------------------
- Tagged.
   Tag requires:   geomvol-V04-01-06 and tracking-V04-01-10
      and is dependent also on greps-V04-01-01 and track-V04-01-01. 

Nov, 8th, J.Generowicz
- Copy auxiliary smooth trajectory point from PIF to ParticleChange

Nov,  4th 2002 M.Dressel transport-V04-01-04
-----------------------------------------------------
- remove G4std:: where it does not belong to
- replace str() functions

Oct  31st, 2002 M.Dressel transport-V04-01-03
-----------------------------------------------------
- bug fix in G4MassGeometrySampler and G4ParallelGeometrySampler

Oct  28th, 2002 M.Dressel transport-V04-01-02
-----------------------------------------------------
- bug fix in G4MassGeometry
