@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4RunManager.cc,v 1.56 2003-01-06 21:31:46 asaim Exp $
+// $Id: G4RunManager.cc,v 1.57 2003-01-14 22:46:33 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -196,18 +196,17 @@ G4bool G4RunManager::ConfirmBeamOnCondition()
     return false;
   }
 
-  if(!(geometryInitialized && physicsInitialized && cutoffInitialized)) 
+  if(!geometryInitialized || !physicsInitialized)
   {
     if(verboseLevel>0)
     {
       G4cout << "Start re-initialization because " << G4endl;
       if(!geometryInitialized) G4cout << "  Geometry" << G4endl;
       if(!physicsInitialized)  G4cout << "  Physics processes" << G4endl;
-      if(!cutoffInitialized)   G4cout << "  Cutoff" << G4endl;
       G4cout << "has been modified since last Run." << G4endl;
     }
-    Initialize();
   }
+  Initialize();
 
   return true;
 }
@@ -373,7 +372,7 @@ void G4RunManager::Initialize()
   stateManager->SetNewState(G4State_Init);
   if(!geometryInitialized) InitializeGeometry();
   if(!physicsInitialized) InitializePhysics();
-  if(!cutoffInitialized) InitializeCutOff();
+  InitializeCutOff();
   stateManager->SetNewState(G4State_Idle);
   if(!initializedAtLeastOnce) initializedAtLeastOnce = true;
 }
@@ -407,20 +406,25 @@ void G4RunManager::InitializePhysics()
 
 void G4RunManager::InitializeCutOff()
 {
-  if(physicsList)
+  if(!cutoffInitialized && physicsList)
   {
     if(verboseLevel>1) G4cout << "physicsList->setCut() start." << G4endl;
     physicsList->SetCuts();
-    if(G4ProductionCutsTable::GetProductionCutsTable()->IsModified())
-    {
-      G4ProductionCutsTable::GetProductionCutsTable()->UpdateCoupleTable();
-      G4ProductionCutsTable::GetProductionCutsTable()->UpdateCutsValues();
-      physicsList->BuildPhysicsTable();
-      G4ProductionCutsTable::GetProductionCutsTable()->PhysicsTableUpdated();
-      physicsList->DumpCutValuesTable();
-    }
+    cutoffInitialized = true;
   }
-  cutoffInitialized = true;
+
+  // Let G4RegionStore scan materials
+  G4RegionStore::GetInstance()->UpdateMaterialList();
+  // Let G4ProductionCutsTable update couples
+  G4ProductionCutsTable::GetProductionCutsTable()->UpdateCoupleTable();
+  G4ProductionCutsTable::GetProductionCutsTable()->DumpCouples();
+
+  if(G4ProductionCutsTable::GetProductionCutsTable()->IsModified())
+  {
+    physicsList->BuildPhysicsTable();
+    G4ProductionCutsTable::GetProductionCutsTable()->PhysicsTableUpdated();
+  }
+  physicsList->DumpCutValuesTableIfRequested();
 }
   
 void G4RunManager::AbortRun(G4bool softAbort)
@@ -486,9 +490,6 @@ void G4RunManager::DefineWorldVolume(G4VPhysicalVolume* worldVol)
   G4LogicalVolume* worldLog = currentWorld->GetLogicalVolume();
   worldLog->SetRegion(defaultRegion);
   defaultRegion->AddRootLogicalVolume(worldLog);
-
-  // Let G4RegionStore scan materials
-  G4RegionStore::GetInstance()->UpdateMaterialList();
 
   // set the world volume to the Navigator
   G4TransportationManager::GetTransportationManager()
