@@ -1,4 +1,4 @@
-$Id: History,v 1.65 2003-01-08 00:09:37 asaim Exp $
+$Id: History,v 1.66 2003-01-14 22:43:28 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jan, 14th, M.Asai          transport-V05-00-02
+-----------------
+- Consolidated transport-V05-00-01 tag for G4Transportation.cc
 
 Jan, 7th, M.Asai           transport-V05-00-01
 ----------------
